build complete html

--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,13 @@
 
   <body>
     <header>
-      <nav>
-        <div class="nav__icon" aria-label="Search">Maido</div>
+      <nav class="nav">
+        <div class="nav__icon" aria-label="Search">
+          <img
+            src="https://maido-dark.fueko.net/content/images/2020/06/maido.svg"
+            alt="madio logo"
+          />
+        </div>
         <ul class="nav__link-list">
           <li><a class="nav__link" href="#"> Home</a></li>
           <li><a class="nav__link" href="#"> Features</a></li>
@@ -25,13 +30,135 @@
           <li><a class="nav__link" href="#"> Newsletter</a></li>
           <li><a class="nav__link" href="#"> Demos</a></li>
           <li><a class="nav__link" href="#"> Get theme </a></li>
+          <div class="nav__search-icon" aria-label="Search">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </div>
         </ul>
-        <div class="nav__search-icon" aria-label="Search">
-          <i class="fa-solid fa-magnifying-glass"></i>
-        </div>
       </nav>
     </header>
 
-    <section class="banner__pinned"></section>
+    <main>
+      <section class="pinned_section">
+        <div>
+          <button class="btn btn--light">Pinned</button>
+          <div>
+            <p class="sub-text">Lorem, ipsum dolor.</p>
+            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+          </div>
+        </div>
+        <div>
+          <button class="btn btn--light">Pinned</button>
+          <div>
+            <p class="sub-text">Lorem, ipsum dolor.</p>
+            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+          </div>
+        </div>
+        <div>
+          <button class="btn btn--light">Pinned</button>
+          <div>
+            <p class="sub-text">Lorem, ipsum dolor.</p>
+            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+          </div>
+        </div>
+        <div>
+          <button class="btn btn--light">Pinned</button>
+          <div>
+            <p class="sub-text">Lorem, ipsum dolor.</p>
+            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+          </div>
+        </div>
+        <div>
+          <button class="btn btn--light">Pinned</button>
+          <div>
+            <p class="sub-text">Lorem, ipsum dolor.</p>
+            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+          </div>
+        </div>
+      </section>
+
+      <section class="single-card-section">
+        <div>
+          <div>
+            <button class="btn btn--transparent-light">lorem</button>
+            <button class="btn btn--transparent-light">lorem</button>
+          </div>
+          <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h2>
+          <p class="sub-text">Lorem ipsum dolor sit amet consectetur.</p>
+        </div>
+
+        <div>
+          <div>
+            <button class="btn btn--transparent-light">lorem</button>
+            <button class="btn btn--transparent-light">lorem</button>
+          </div>
+          <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h2>
+          <p class="sub-text">Lorem ipsum dolor sit amet consectetur.</p>
+        </div>
+
+        <div>
+          <div>
+            <button class="btn btn--transparent-light">lorem</button>
+            <button class="btn btn--transparent-light">lorem</button>
+          </div>
+          <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h2>
+          <p class="sub-text">Lorem ipsum dolor sit amet consectetur.</p>
+        </div>
+      </section>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+      <section class="grid-card-section">
+        <div>
+          <div>
+            <button class="btn btn--transparent-light">Lorem, ipsum.</button>
+            <button class="btn btn--transparent-light">Lorem, ipsum.</button>
+          </div>
+          <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h2>
+          <p class="sub-text">Lorem ipsum dolor sit amet consectetur.</p>
+        </div>
+        <div>
+          <div>
+            <button class="btn btn--transparent-light">Lorem, ipsum.</button>
+            <button class="btn btn--transparent-light">Lorem, ipsum.</button>
+          </div>
+          <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h2>
+          <p class="sub-text">Lorem ipsum dolor sit amet consectetur.</p>
+        </div>
+        <div>
+          <div>
+            <button class="btn btn--transparent-light">Lorem, ipsum.</button>
+            <button class="btn btn--transparent-light">Lorem, ipsum.</button>
+          </div>
+          <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h2>
+          <p class="sub-text">Lorem ipsum dolor sit amet consectetur.</p>
+        </div>
+        <div>
+          <div>
+            <button class="btn btn--transparent-light">Lorem, ipsum.</button>
+            <button class="btn btn--transparent-light">Lorem, ipsum.</button>
+          </div>
+          <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h2>
+          <p class="sub-text">Lorem ipsum dolor sit amet consectetur.</p>
+        </div>
+        <div>
+          <div>
+            <button class="btn btn--transparent-light">Lorem, ipsum.</button>
+            <button class="btn btn--transparent-light">Lorem, ipsum.</button>
+          </div>
+          <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h2>
+          <p class="sub-text">Lorem ipsum dolor sit amet consectetur.</p>
+        </div>
+      </section>
+
+      <div class="loadmore-section">
+        <button class="btn btn--orange">Load more</button>
+      </div>
+    </main>
+    <footer>
+      <form>
+        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+        <p><span>Lorem ipsum dolor sit.</span></p>
+        <input type="email" placeholder="Your email address" />
+        <button class="btn btn--orange">Subscribe</button>
+      </form>
+    </footer>
   </body>
 </html>
