--- a/src/index.html
+++ b/src/index.html
@@ -15,25 +15,28 @@
 
   <body>
     <header>
-      <nav class="nav">
-        <div class="nav__icon" aria-label="Search">
+      <nav>
+        <div aria-label="Search">
           <img
             src="https://maido-dark.fueko.net/content/images/2020/06/maido.svg"
             alt="madio logo"
           />
         </div>
-        <ul class="nav__link-list">
-          <li><a class="nav__link" href="#"> Home</a></li>
-          <li><a class="nav__link" href="#"> Features</a></li>
-          <li><a class="nav__link" href="#"> Style Guide</a></li>
-          <li><a class="nav__link" href="#"> Contact</a></li>
-          <li><a class="nav__link" href="#"> Newsletter</a></li>
-          <li><a class="nav__link" href="#"> Demos</a></li>
-          <li><a class="nav__link" href="#"> Get theme </a></li>
-          <div class="nav__search-icon" aria-label="Search">
+        <ul class="nav__list">
+          <li><a href="#"> Home</a></li>
+          <li><a href="#"> Features</a></li>
+          <li><a href="#"> Style Guide</a></li>
+          <li><a href="#"> Contact</a></li>
+          <li><a href="#"> Newsletter</a></li>
+          <li><a href="#"> Demos</a></li>
+          <li><a href="#"> Get theme </a></li>
+          <li aria-label="Search">
             <i class="fa-solid fa-magnifying-glass"></i>
-          </div>
+          </li>
         </ul>
+        <div class="ham__menu">
+          <i class="fa-solid fa-bars"></i>
+        </div>
       </nav>
     </header>
 
