added style to the main components

--- a/src/index.html
+++ b/src/index.html
@@ -41,40 +41,40 @@
     </header>
 
     <main>
-      <section class="pinned_section">
+      <section class="pinned-section">
         <div>
           <button class="btn btn--light">Pinned</button>
           <div>
             <p class="sub-text">Lorem, ipsum dolor.</p>
-            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+            <h1>Lorem ipsum dolor sit amet consectetur.</h1>
           </div>
         </div>
         <div>
           <button class="btn btn--light">Pinned</button>
           <div>
             <p class="sub-text">Lorem, ipsum dolor.</p>
-            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+            <h1>Lorem ipsum dolor sit amet consectetur.</h1>
           </div>
         </div>
         <div>
           <button class="btn btn--light">Pinned</button>
           <div>
             <p class="sub-text">Lorem, ipsum dolor.</p>
-            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+            <h1>Lorem ipsum dolor sit amet consectetur.</h1>
           </div>
         </div>
         <div>
           <button class="btn btn--light">Pinned</button>
           <div>
             <p class="sub-text">Lorem, ipsum dolor.</p>
-            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+            <h1>Lorem ipsum dolor sit amet consectetur.</h1>
           </div>
         </div>
         <div>
           <button class="btn btn--light">Pinned</button>
           <div>
             <p class="sub-text">Lorem, ipsum dolor.</p>
-            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+            <h1>Lorem ipsum dolor sit amet consectetur.</h1>
           </div>
         </div>
       </section>
@@ -107,7 +107,11 @@
           <p class="sub-text">Lorem ipsum dolor sit amet consectetur.</p>
         </div>
       </section>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+
+      <section class="info-section">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+      </section>
+
       <section class="grid-card-section">
         <div>
           <div>
