--- a/src/index.html
+++ b/src/index.html
@@ -161,9 +161,13 @@
     </main>
     <footer>
       <form>
-        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
-        <p><span>Lorem ipsum dolor sit.</span></p>
-        <input type="email" placeholder="Your email address" />
+        <h3>Subscribe to see what we're thinking</h3>
+        <p><span>Start your day with Maido| </span></p>
+        <input
+          type="email"
+          placeholder="Your email address"
+          class="styled-input"
+        />
         <button class="btn btn--orange">Subscribe</button>
       </form>
     </footer>
